Revision history for Perl extension Term-ProgressBar.

2.13 Fri May 18 06:24:42 2012
	- remove unused and invalid SIGNATURE file
	- move content of BUGS to Changes
	- Remove the INSTALL and configure files,
	  people should use the standard CPAN installation tools
    

2.12 Wed May 16 12:47:16 2012
	- use strict; use warnings; in examples
	- remove bareword from POD (JBAKER)
	- make lbrack and rbrack official.

2.11 Fri Feb 17 12:31:04 2012
	- skip the signature verification

2.10  Wed Dec 21 11:18:26 2011
	- remove Build.PL (keep the Makefile.PL only)
	- Replace home-made testing tools with CPAN-ish tools
	- Require Capture::Tiny for testing
	- New co-maintainer: Gabor Szabo

2.09  Sun Mar 13  9:17 PM GMT 2005
	- Fix for incorrect formatting of 'D...' time done at end

2.08  Sat Mar 12 11:47 AM GMT 2005
	- Add remove option
	- Add patch to account for weird terminal sizing under Windoze
	  (thanks to Andrew Peters for the patch).

2.07  Sun Mar  6  1:31 PM GMT 2005
	- Correct handling of non-term mode to output stats but no PB
	- Print time taken to complete in ETA mode when Done
	- Add use of 'name' to example in 'new' doc
	- Add doc of use of minor characters to description
	- Add doc. for name value to new

2.06  Sun Mar 14 10:46 AM GMT 2004
	- Add patch to cope when terminal size cannot be detected or is
	  too small.
	  Thanks to Ed Avis (<ed at membled dot com>) for the patch.
	- Add patch to test to avoid failure on windoze due to unlinking open
	  files
	- Add patch to cope when Term::ReadKey fails to initialize for some
	  reason.
	  Thanks to Scott Cain (<cain at cshl dot org>) for the patch.
	- Add patch to suppress unnecessary terminal updates
	  Thanks to Ed Avis (<ed at membled dot com>) for the patch.

2.05  Sat Aug 30  4:23 PM GMT 2003
	- Fix test.pm to handle OS (e.g., Solaris) who refuse to delete the cwd

2.04  Sat Aug 14  4:38 PM GMT 2003
	- Change build system to accomodate CPAN & automated tests

2.03  Sat Jan 11  3:47 PM GMT 2003